--- a/index.html
+++ b/index.html
@@ -4,9 +4,58 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <article>
+        <figure>
+            <img src="./img/01.jpg" alt="tablette">
+            <figcaption><h2>Card Title</h2></figcaption>
+            <button>. . .</button>
+        </figure>
+        <a href="">This is a link</a>
+    </article>
+    <article>
+        <figure>
+            <img src="./img/02.jpg" alt="tablette2">
+            <figcaption><h2>Card Title</h2></figcaption>
+            <button>. . .</button>
+        </figure>
+        <a href="">This is a link</a>
+    </article>
+    <article>
+        <figure>
+            <img src="./img/03.jpg" alt="pcport">
+            <figcaption><h2>Card Title</h2></figcaption>
+            <button>. . .</button>
+        </figure>
+        <a href="">This is a link</a>
+    </article>
+    <article>
+        <figure>
+            <img src="./img/04.jpg" alt="pcport2">
+            <figcaption><h2>Card Title</h2></figcaption>
+            <button>. . .</button>
+        </figure>
+        <a href="">This is a link</a>
+    </article>
+    <article>
+        <figure>
+            <img src="./img/05.jpg" alt="portable">
+            <figcaption><h2>Card Title</h2></figcaption>
+            <button>. . .</button>
+        </figure>
+        <a href="">This is a link</a>
+    </article>
+    <article>
+        <figure>
+            <img src="./img/06.jpg" alt="pcport3">
+            <figcaption><h2>Card Title</h2></figcaption>
+            <button>. . .</button>
+        </figure>
+        <a href="">This is a link</a>
+    </article>
+
 </body>
 </html>
