--- a/index.html
+++ b/index.html
@@ -5,54 +5,80 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     <title>Document</title>
 </head>
 <body>
     <article>
         <figure>
             <img src="./img/01.jpg" alt="tablette">
-            <figcaption><h2>Card Title</h2></figcaption>
-            <button>. . .</button>
+            <div class="titre">
+                <figcaption><h2>Card Title</h2></figcaption>
+                    <nav>
+                        <a href="#"><i class="fas fa-ellipsis-v"></i></a>
+                    </nav>
+            </div>
         </figure>
         <a href="">This is a link</a>
     </article>
     <article>
         <figure>
             <img src="./img/02.jpg" alt="tablette2">
-            <figcaption><h2>Card Title</h2></figcaption>
-            <button>. . .</button>
+            <div class="titre">
+                <figcaption><h2>Card Title</h2></figcaption>
+                    <nav>
+                        <a href="#"><i class="fas fa-ellipsis-v"></i></a>
+                    </nav>
+            </div>
         </figure>
         <a href="">This is a link</a>
     </article>
     <article>
         <figure>
             <img src="./img/03.jpg" alt="pcport">
-            <figcaption><h2>Card Title</h2></figcaption>
-            <button>. . .</button>
+            <div class="titre">
+                <figcaption><h2>Card Title</h2></figcaption>
+                    <nav>
+                        <a href="#"><i class="fas fa-ellipsis-v"></i></a>    
+                    </nav>
+            </div>
         </figure>
         <a href="">This is a link</a>
     </article>
     <article>
         <figure>
             <img src="./img/04.jpg" alt="pcport2">
-            <figcaption><h2>Card Title</h2></figcaption>
-            <button>. . .</button>
+            <div class="titre">
+                <figcaption><h2>Card Title</h2></figcaption>
+                    <nav>
+                        <a href="#"><i class="fas fa-ellipsis-v"></i></a>
+                    </nav>
+            </div>
         </figure>
         <a href="">This is a link</a>
     </article>
     <article>
         <figure>
             <img src="./img/05.jpg" alt="portable">
-            <figcaption><h2>Card Title</h2></figcaption>
-            <button>. . .</button>
+            <div class="titre">
+                <figcaption><h2>Card Title</h2></figcaption>
+                    <nav>
+                        <a href="#"><i class="fas fa-ellipsis-v"></i></a>  
+                    </nav>
+            </div>
         </figure>
         <a href="">This is a link</a>
     </article>
     <article>
         <figure>
             <img src="./img/06.jpg" alt="pcport3">
-            <figcaption><h2>Card Title</h2></figcaption>
-            <button>. . .</button>
+            <div class="titre">
+                <figcaption><h2>Card Title</h2></figcaption>
+                    <nav>
+                        <a href="#"><i class="fas fa-ellipsis-v"></i></a>
+                    </nav>
+            </div>
         </figure>
         <a href="">This is a link</a>
     </article>
