add full bootstrap

--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -16,7 +16,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <div class="container-fluid row">
         <article class="col-xl-4 col-lg-6 col-sm-12">
-            <figure>
+            <figure class="shadow bg-white rounded">
                 <img src="./img/01.jpg" alt="tablette">
                 <figcaption class="d-flex">
                     <div class="w-100">
@@ -30,7 +30,7 @@
             </figure>
         </article>
         <article class="col-xl-4 col-lg-6 col-sm-12">
-            <figure>
+            <figure class="shadow bg-white rounded">
                 <img src="./img/02.jpg" alt="tablette2">
                 <figcaption class="d-flex">
                     <div class="w-100">
@@ -44,7 +44,7 @@
             </figure>
         </article>
         <article class="col-xl-4 col-lg-6 col-sm-12">
-            <figure>
+            <figure class="shadow bg-white rounded">
                 <img src="./img/03.jpg" alt="pcport">
                 <figcaption class="d-flex">
                     <div class="w-100">
@@ -58,7 +58,7 @@
             </figure>
         </article>
         <article class="col-xl-4 col-lg-6 col-sm-12">
-            <figure>
+            <figure class="shadow bg-white rounded">
                 <img src="./img/04.jpg" alt="pcport2">
                 <figcaption class="d-flex">
                     <div class="w-100">
@@ -72,7 +72,7 @@
             </figure>
         </article>
         <article class="col-xl-4 col-lg-6 col-sm-12">
-            <figure>
+            <figure class="shadow bg-white rounded">
                 <img src="./img/05.jpg" alt="portable">
                 <figcaption class="d-flex">
                     <div class="w-100">
@@ -86,7 +86,7 @@
             </figure>
         </article>
         <article class="col-xl-4 col-lg-6 col-sm-12">
-            <figure>
+            <figure class="shadow bg-white rounded">
                 <img src="./img/06.jpg" alt="pcport3">
                 <figcaption class="d-flex">
                     <div class="w-100">
